--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "urlaubs-planer",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Urlaubs-Planer für Freunde",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +16,8 @@
     "bcryptjs": "^3.0.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
